@@ -12,6 +12,8 @@ Optimizations:
     which is only a performance bug)
 
 Bug Fixes/Other Changes:
+  * Fixed bug #932314 (non-comparable values must be treated as distinct by
+    fn:distinct-values)
   * Fixed bug #991088$ (raise XUST0001 in trycatch with mixed updating and simple clauses)
   * Fixed bug #854506 (ugly type error messages) and partial fix for bug #867008
   * Fixed bug #1008082 (bug in transform expr when a copy var is not used anywhere)
